--- a/package.json
+++ b/package.json
@@ -1,4 +1,33 @@
 {
-"type": "commonjs",
-"homepage”: ".",
+  "name": "livekit-meet",
+  "version": "0.2.0",
+  "private": true,
+  "homepage”: ".",
+  "scripts": {
+    "dev": "next dev",
+    "deploy”: “gh-pages -d build",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@livekit/components-react": "0.7.0",
+    "@livekit/components-styles": "0.2.1",
+    "git": "^0.1.5",
+    "livekit-client": "1.7.1",
+    "livekit-server-sdk": "1.1.0",
+    "next": "12.3.4",
+    "next-seo": "^5.15.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.31",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.37.0",
+    "eslint-config-next": "12.3.4",
+    "gh-pages": "^5.0.0",
+    "typescript": "4.9.5"
+  }
 }
