--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage”: ".",
   "scripts": {
     "dev": "next dev",
-    "deploy”: “gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
